# crabtype

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  config.rs  main.rs  models.rs  ui.rs
src/generator/: formatting.rs  generator.rs  mod.rs  punctuation.rs  quote_controller.rs  sourcing.rs  word_controller.rs
src/ui/: mod.rs  results.rs  test.rs  utils.rs
src/utils/: strings.rs
